--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -2,7 +2,15 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
-.table{
-  background-color: #dbbeb6;
+// .table{
+//   background-color: #dbbeb6;
+// }
+
+.username{
+  margin-top: 0;
+}
+
+.nickname{
+  margin-bottom: 0;
 }
 
