--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -9,11 +9,15 @@
     </div>
     <% end %>
 <div class = "row">
-  <div class = "col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mx-auto">
+  <div class = "col-sm-12 col-md-8 px-5 px-sm-0 mx-auto">
     <%= form_with model:@post, url:posts_path, local:true do |f| %>
     <h2>新規投稿</h2>
     <div class = "form">
       <table class = "table table-borderless">
+        <tr>
+          <th style="width: 50%"></th>
+          <td style="width: 50%"></td>
+        </tr>
         <tr>
           <th>投稿写真</th>
           <td><%= f.attachment_field :image, placeholder:"添付写真" %></td>
@@ -24,7 +28,7 @@
         </tr>
         <tr>
           <th>投稿内容</th>
-          <td><%= f.text_area :text, placeholder:"投稿内容" %></td>
+          <td><%= f.text_area :text, class: 'form-control', placeholder:"投稿内容" %></td>
         </tr>
       </table>
     </div>
