--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -10,30 +10,38 @@
     <% end %>
 <div class="container">
   <div class="row">
-    <div class="col-md-8 col-sm-12 px-sm-0">
+    <div class="col-md-10 col-sm-12 px-5 px-sm-0 mx-auto">
       <%= form_with model:@user, url:user_path(current_user.id), local:true do |f| %>
       <h2>登録情報変更</h2>
       <div class="form">
         <table class="table table-borderless">
           <tr>
+            <th style="width: 50%"></th>
+            <td style="width: 50%"></td>
+          </tr>
+          <tr>
             <th>プロフィール写真</th>
-            <td><%= f.attachment_field :image, placeholder:"プロフィール写真" %></td>
+            <td><%= f.attachment_field :image %></td>
           </tr>
           <tr>
             <th>ニックネーム</th>
-            <td><%= f.text_field :nickname, placeholder:"とまっとくん", class: 'form-control' %></td>
+            <td><%= f.text_field :nickname %></td>
           </tr>
           <tr>
             <th>ユーザーネーム</th>
-            <td><%= f.text_area :username, placeholder:"tomattokun25", class: 'form-control' %></td>
+            <td><%= f.text_area :username %></td>
+          </tr>
+          <tr>
+            <th>Eメール</th>
+            <td><%= f.text_field :email %></td>
           </tr>
           <tr>
             <th>育ててる作物</th>
-            <td><%= f.text_field :crop, placeholder:"トマト", class: 'form-control' %></td>
+            <td><%= f.text_field :crop %></td>
           </tr>
           <tr>
             <th>自己紹介</th>
-            <td><%= f.text_area :introduction, class: 'form-control', size: "20x5", placeholder:"トマトの家庭菜園をはじめました！" %></td>
+            <td><%= f.text_area :introduction %></td>
           </tr>
         </table>
       </div>
