--- a/app/views/diaries/show.html.erb
+++ b/app/views/diaries/show.html.erb
@@ -1,18 +1,18 @@
 <div class = "container px-sm-0">
-<h2><%= @diary.created_at.strftime("%Y年%m月%d日") %>の日記</h2>
- <div class = "row">
-        <%= link_to "削除する",diary_path(@diary.id), method: :delete, data: {confirm: "本当に削除しますか？"}, class: "btn btn-outline-danger" %>
+    <h2><%= @diary.created_at.strftime("%Y年%m月%d日") %>の日記</h2>
+    <div class = "row">
+        <%= link_to "成長日記一覧へ",diary_path(@diary.id), class: "btn btn-outline-warning btn-sm" %>
     </div>
     <div class = "row">
         <div class = "col-md-5 mt-3">
-            <%= attachment_image_tag @diary, :image, :fill, 300, 200, format:"jpeg" %>
+            <%= attachment_image_tag @diary, :image, :fill, 300, 200, format:"jpeg" %></br>
+            <%= link_to "削除する",diary_path(@diary.id), method: :delete, data: {confirm: "本当に削除しますか？"}, class: "btn btn-outline-danger btn-sm" %>
         </div>
         <div class = "col-md-7">
-            <div class="versial">
-            <h4><%= @diary.title %></h4>
-            <p><%= @diary.text %></p>
+            <div class="versial-content">
+                <h4><%= @diary.title %></h4>
+                <p><%= @diary.text %></p>
             </div>
         </div>
     </div>
-   
-</div>
+ </div>
