--- a/app/views/relationships/_unfollow.html.erb
+++ b/app/views/relationships/_unfollow.html.erb
@@ -1,3 +1,3 @@
 <%= form_with model:current_user, url:user_relationships_path(@user), method: :delete, remote: :true do |f| %>
- <%= f.submit "フォローをやめる", class: "btn btn-outline-secondary" %>
-<% end %> 
+ <%= f.submit "フォロー中", class: "btn btn-outline-danger btn-sm" %>
+<% end %>
