--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,49 +1,31 @@
 <%= notice %>
-<div class="container center-block">
-  <!--<div class="row">-->
-  <!--  <div class = "col-md-12 offset-md-1">-->
-      <div class = "row">
+<div class="container">
+  <div class="row">
+    <div class="col-md-12 col-sm-12 mt-3 mb-5 text-center">
+      <h2>投稿一覧</h2>
+    </div>
+  </div>
 
-        <!--<div class = "col-md-1 sm-2 m-4">-->
-          <%#= image_tag 'nasubi.png',:width => '60' %>
-        <!--</div>-->
-        <div class = "col-md-12 col-sm-12 mt-3 mb-5 text-center">
-          <h2>投稿一覧</h2>
-        <!--</div>-->
-        <!--<div class = "col-md-1 sm-2 m-4">-->
-          <%#= image_tag 'nasubi.png',:width => '60' %>
-        <!--</div>-->
-        </div>
-        </div>
-        <div class="row">
-
-          <% @posts.each do |post| %>
-          <div class = "col-md-6 col-sm-12 text-center">
-          <ul class = "post pl-0">
-            <li>
-              <%= link_to post_path(post.id) do %>
-              <%= attachment_image_tag post, :image, size:'300x230', format:"jpeg", class:"rounded-pill" %>
-              <% end %>
-            </li>
-            <li>
-              <strong><%= post.title %></strong>
-            </li>
-            <li>
-              <%= link_to user_path(post.user_id) do %>
-               <%= post.user.nickname %>
-              <% end %>
-            </li>
-          </ul>
-          </div>
-        <% end %>
-
-      </div>
-      </div>
-  <!--  </div>-->
-  <!--</div>-->
-  <!--<%#= paginate @posts %>-->
-<!--</div>-->
-
-
-
+  <div class="row">
+    <% @posts.each do |post| %>
+    <div class="col-md-6 col-sm-12 text-center">
+      <ul class="post pl-0">
+        <li>
+          <%= link_to post_path(post.id) do %>
+            <%= attachment_image_tag post, :image, size:'300x230', format:"jpeg", class:"rounded-pill" %>
+          <% end %>
+        </li>
+        <li>
+          <strong><%= post.title %></strong>
+        </li>
+        <li>
+          <%= link_to user_path(post.user_id) do %>
+            <%= post.user.nickname %>
+          <% end %>
+        </li>
+      </ul>
+    </div>
+    <% end %>
+  </div>
+</div>
 
