--- a/app/views/diaries/show.html.erb
+++ b/app/views/diaries/show.html.erb
@@ -1,7 +1,7 @@
 <div class = "container px-sm-0">
     <h2><%= @diary.created_at.strftime("%Y年%m月%d日") %>の日記</h2>
     <div class = "row">
-        <%= link_to "成長日記一覧へ",diary_path(@diary.id), class: "btn btn-outline-warning btn-sm" %>
+        <%= link_to "成長日記一覧へ",diaries_path, class: "btn btn-outline-warning btn-sm" %>
     </div>
     <div class = "row">
         <div class = "col-md-5 mt-3">
